--- a/AoC2022/AoC2022/AoC2022.csproj
+++ b/AoC2022/AoC2022/AoC2022.csproj
@@ -8,13 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Day02\input.txt" />
     <None Remove="Day01\input.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Day02\input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Day01\input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
   </ItemGroup>
 
 
